@@ -3,10 +3,15 @@ SepRel <- function (pobject){   # requires an object of class "ppar"
 
   # get person scores from theta table (which is generated by the person.parameter function)
   PersonScoresFull <- pobject[["theta.table"]][["Person Parameter"]]
-  # remove missing values
+  names(PersonScoresFull) <- rownames(pobject[["theta.table"]])
+  PersonScoresFull <- PersonScoresFull[pobject[["theta.table"]][["Interpolated"]] == FALSE]  ## disregard full/0 responses
   PersonScores <- PersonScoresFull[complete.cases(PersonScoresFull)]
   # get standard errors 
-  StandardErrors <- unlist(pobject[["se.theta"]])
+  se_vec <- unlist(pobject[["se.theta"]])
+  names(se_vec) <- gsub("NAgroup[0-9]+.", "", names(se_vec))
+  ind <- match(names(PersonScores), names(se_vec))    ## put them in right order
+  StandardErrors <- se_vec[ind]
+  
 
   # ==============================
   # compute seperation reliability
