@@ -11,7 +11,7 @@ function(err)
       rev(r)
     }
     errortxt<-c("\tn < 0 or n > 4096\n",
-                "\tk < 0 or k > 128\n",
+                "\tk < 0 or k > 256\n",
                 "\tn_eff < 0 or n_eff > 8191\n",
                 "\tburn_in < 0\n",
                 "\tstep <= 0\n",
